Bug 155611 - Wrong layout and crash closing text documents with nested sections and tables in 7.5.3
Summary: Wrong layout and crash closing text documents with nested sections and tables...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.3.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2023-05-31 14:33 UTC by Mike Kaganski
Modified: 2023-06-01 09:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Wrong sections layout and crash in 7.5.3 (1.06 KB, application/vnd.oasis.opendocument.text)
2023-05-31 14:33 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-05-31 14:33:26 UTC
Created attachment 187619 [details]
Wrong sections layout and crash in 7.5.3

Open the attachment. After commit efb3c57851d29440ef086c68a6c1ddbb8bc8fc00, it opens with wrong layout (the last cell of the table in the Outer section gets split, its first paragraph with text "bar" is not shown, and its sub-table with text "baz" goes under the Inner section and its text "abc"). Closing the file crashes the program.
Comment 1 Mike Kaganski 2023-05-31 15:18:46 UTC
https://gerrit.libreoffice.org/c/core/+/152454
Comment 2 Commit Notification 2023-05-31 18:31:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/66eabacb7c3618d2724470203d7e95c256334520

tdf#155611: SwFrame::FindNext sometimes returns a sub-frame of this frame

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-01 09:42:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/80e8b5e925b0059226c36abe2f0d49a8299084f7

tdf#155611: SwFrame::FindNext sometimes returns a sub-frame of this frame

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.